@@ -22,7 +22,7 @@ int mpiPi_debug = 0;
 
 int mpiPi_vmajor = 3;
 int mpiPi_vminor = 2;
-int mpiPi_vpatch = 0;
+int mpiPi_vpatch = 1;
 char *mpiPi_vdate = __DATE__;
 char *mpiPi_vtime = __TIME__;
 
